--- a/index.html
+++ b/index.html
@@ -91,9 +91,8 @@
   </p>
   <hr>
   <p>
-    Kamil Trzciński (c) 2023,
-    <a href="https://github.com/ayufan/niimprint-web">github.com/ayufan/niimprint-web</a>.
-    Adopted from <a href="https://github.com/kjy00302/niimprint">github.com/kjy00302/niimprint</a></p>
+    <a href="https://github.com/rayps/niimprint-web">github.com/rayps/niimprint-web</a>.
+    Adopted from <a href="https://github.com/ayufan/niimprint-web">github.com/ayufan/niimprint-web</a></p>
   <script>
     const canvasFlipXY = true;
 
